stylesheets and GA tracking

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -23,40 +23,40 @@ under the License.
 
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #2E3336 !default;
-$examples-bg: #2E3336 !default;
-$code-bg: #1E2224 !default;
-$code-annotation-bg: #191D1F !default;
-$nav-subitem-bg: #1E2224 !default;
-$nav-active-bg: #0F75D4 !default;
-$nav-active-parent-bg: #1E2224 !default; // parent links of the current section
+$nav-bg: #F4F7FB !default;
+$examples-bg: #292c33 !default;
+$code-bg: #292c33 !default;
+$code-annotation-bg: #181c24 !default;
+$nav-subitem-bg: #c9dbff !default;
+$nav-active-bg: #2671ff !default;
+$nav-active-parent-bg: #c9dbff !default; // parent links of the current section
 $lang-select-border: #000 !default;
-$lang-select-bg: #1E2224 !default;
+$lang-select-bg: #fdfdfd !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
 $lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse is pressed
-$main-bg: #F3F7F9 !default;
-$aside-notice-bg: #8fbcd4 !default;
-$aside-warning-bg: #c97a7e !default;
-$aside-success-bg: #6ac174 !default;
+$main-bg: #FDFDFD !default;
+$aside-notice-bg: #e9f0ff !default;
+$aside-warning-bg: #ffd0a5 !default;
+$aside-success-bg: #30de50 !default;
 $search-notice-bg: #c97a7e !default;
 
 
 // TEXT COLORS
 ////////////////////
-$main-text: #333 !default; // main content text color
-$nav-text: #fff !default;
-$nav-active-text: #fff !default;
-$nav-active-parent-text: #fff !default; // parent links of the current section
-$lang-select-text: #fff !default; // color of unselected language tab text
-$lang-select-active-text: #fff !default; // color of selected language tab text
-$lang-select-pressed-text: #fff !default; // color of language tab text when mouse is pressed
+$main-text: #3d4c59 !default; // main content text color
+$nav-text: #3d4c59 !default;
+$nav-active-text: #ffffff !default;
+$nav-active-parent-text: #2671FF !default; // parent links of the current section
+$lang-select-text: #3d4c59 !default; // color of unselected language tab text
+$lang-select-active-text: #2671FF !default; // color of selected language tab text
+$lang-select-pressed-text: #2671FF !default; // color of language tab text when mouse is pressed
 
 
 // SIZES
 ////////////////////
-$nav-width: 230px !default; // width of the navbar
-$examples-width: 50% !default; // portion of the screen taken up by code examples
-$logo-margin: 0px !default; // margin below logo
+$nav-width: 280px !default; // width of the navbar
+$examples-width: 45% !default; // portion of the screen taken up by code examples
+$logo-margin: 5px !default; // margin below logo
 $main-padding: 28px !default; // padding to left and right of content & examples
 $nav-padding: 15px !default; // padding to left and right of navbar
 $nav-v-padding: 10px !default; // padding used vertically around search boxes and results
