--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -74,8 +74,10 @@ html, body {
   // This is the logo at the top of the ToC
   .logo {
     display: block;
-    max-width: 100%;
+    max-width: 70%;
     margin-bottom: $logo-margin;
+    margin-top: 10px;
+    margin-left: 15px;
   }
 
   &>.search {
@@ -278,13 +280,14 @@ html, body {
 }
 
 .lang-selector {
-  display: flex;
+  //display: flex;
   background-color: $lang-select-bg;
   width: 100%;
   font-weight: bold;
-  overflow-x: auto;
+  //overflow-x: auto;
   a {
-    display: inline;
+    display: block;
+    float: left;
     color: $lang-select-text;
     text-decoration: none;
     padding: 0 10px;
@@ -352,8 +355,8 @@ html, body {
     padding-bottom: 0.5em;
     margin-bottom: $h1-margin-bottom;
     margin-top: 2em;
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
+    border-top: 1px solid #e9e9f0;
+    border-bottom: 1px solid #e9e9f0;
     background-color: #fdfdfd;
   }
 
@@ -388,7 +391,7 @@ html, body {
   }
 
   h4, h5, h6 {
-    font-size: 10px;
+    font-size: 12px;
   }
 
   hr {
@@ -467,8 +470,11 @@ html, body {
     padding-bottom: 1em;
     margin-top: 1.5em;
     margin-bottom: 1.5em;
+    margin-left: 1.5em;
+    margin-right: $examples-width + 1%;
     background: $aside-notice-bg;
     line-height: 1.6;
+    border-radius: 6px;
 
     &.warning {
       background-color: $aside-warning-bg;
@@ -501,8 +507,8 @@ html, body {
     padding: 2px;
     margin: -3px;
     border-radius: 4px;
-    border: 1px solid #F7E633;
-    background: linear-gradient(to top left, #F7E633 0%, #F1D32F 100%);
+    border: 2px solid #2671FF;
+    background: rgba(255,255,255, 0.1);
   }
 }
 
