--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -40,6 +40,16 @@ under the License.
       ga('send', 'pageview');
     </script>
     <!-- End Google Analytics -->
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RZ1X1G6J7F"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-RZ1X1G6J7F');
+    </script>
+    <!-- End Global site tag (gtag.js) - Google Analytics -->\
 
     <style media="screen">
       <%= Rouge::Themes::MonokaiSublimeSlate.render(:scope => '.highlight') %>
