--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -64,7 +64,7 @@ body {
   margin: 0;
 
   li {
-    margin-right: 15px;
+    margin-right: 35px;
     white-space: nowrap;
   }
   li:last-child {
@@ -77,6 +77,7 @@ body {
   }
   li.active a {
     font-weight: bold;
+    border-bottom:#253893 solid ;
   }
 }
 
